reports/20260707_123814_PTP-113C.7.6B.1_recovery_sintaxe_mobile_server_RECOVERY.txt
PREDIXAI BR — PTP-113C.7.6B.1 — RECOVERY SINTAXE MOBILE SERVER
Data: 2026-07-07 12:38:15 -0300
Repo: /home/leo/Documentos/GitHub/predixai-platform

RESULTADO_FINAL: FAIL_PY_COMPILE_SERVER_AFTER_RECOVERY
ENDPOINT_STATUS: NOT_TESTED
SERVER_STARTED_FOR_TEST: NO

OBJETIVO
Corrigir a quebra residual deixada pela C.7.6B no arquivo:
- scripts/predixai_trader_mobile_server.py

ERRO ALVO
- SyntaxError em return html.replace("</body>", assets + quebra real de linha.
- Causa: string Python escrita com newline real em vez de escape \n.

ARQUIVOS ALTERADOS
- scripts/predixai_trader_mobile_server.py
- src/predixai/main.py

BACKUP
- /home/leo/Documentos/GitHub/predixai-platform/backups/20260707_123814_PTP-113C.7.6B.1_recovery_sintaxe_mobile_server

SEGURANÇA
- Nenhum saldo real usado.
- Nenhum login real usado.
- Nenhuma ordem real executada.
- Nenhum auto-click ativado.
- Nenhum clique em compra/venda.

LOG TÉCNICO
PREDIXAI BR — PTP-113C.7.6B.1 — recovery do mobile_server
Data: 2026-07-07 12:38:14 -0300
Repo: /home/leo/Documentos/GitHub/predixai-platform
Regra: 100% simulado; sem saldo real, login real, ordem real, auto-click ou clique.

===== INVESTIGAR =====

===== git branch --show-current =====
main
RC=0

===== git log -3 --oneline =====
1fe269a PTP 113 C.7.6B correcao cirurgica sintaxe dedup C75
d05841b PTP 113 C.7.5 estabilizar reader mobile polling
99b915d PTP 113 C.7.4 fix sqlite reader lock
RC=0

===== git status --short --untracked-files=all =====
 M reports/20260707_114740_PTP-113C.7.5_estabilizar_reader_mobile_polling_FIX.txt
?? reports/20260707_122423_PTP-113C.7.6A_auditoria_quebra_pos_C75_AUDIT.txt
RC=0

===== env PYTHONPYCACHEPREFIX=/tmp/predixai_ptp113c76b1_pre_pycache python3 -m py_compile scripts/predixai_trader_mobile_server.py || true =====
  File "scripts/predixai_trader_mobile_server.py", line 9556
    return html.replace("</body>", assets + "
                                            ^
SyntaxError: unterminated string literal (detected at line 9556)
RC=0

===== BACKUP =====
Backup criado em: /home/leo/Documentos/GitHub/predixai-platform/backups/20260707_123814_PTP-113C.7.6B.1_recovery_sintaxe_mobile_server

===== CONSTRUIR: RECOVERY CIRÚRGICO =====
RECOVERY_PATCH_RESULT=OK
changed_main=False
changed_server_top=False
changed_func1=True
changed_func2=True

===== VALIDAR: PY_COMPILE =====

===== env PYTHONPYCACHEPREFIX=/tmp/predixai_ptp113c76b1_pycache python3 -m py_compile scripts/predixai_trader_mobile_server.py =====
  File "scripts/predixai_trader_mobile_server.py", line 7697
    const MARKER = "PTP113C75_MOBILE_STATE_FETCH_DEDUP";
    ^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
RC=1

===== env PYTHONPYCACHEPREFIX=/tmp/predixai_ptp113c76b1_pycache python3 -m py_compile src/predixai/main.py =====
RC=0

===== env PYTHONPYCACHEPREFIX=/tmp/predixai_ptp113c76b1_pycache python3 -m py_compile src/predixai/runtime/sqlite_resilience.py =====
RC=0

===== env PYTHONPYCACHEPREFIX=/tmp/predixai_ptp113c76b1_pycache python3 -m py_compile src/predixai/runtime/__init__.py =====
RC=0

===== RECOVERY FALHOU: RESTAURANDO BACKUP DOS ARQUIVOS DE CÓDIGO =====
Código restaurado para estado pré-C.7.6B.1. Relatório será registrado.

===== VALIDAR: DIFF E MARCADORES =====

===== git diff --check =====
RC=0

===== grep -n 'return html.replace("</body>"' scripts/predixai_trader_mobile_server.py | tail -20 || true =====
9556:        return html.replace("</body>", assets + "
9968:        return html.replace("</body>", assets + "
RC=0

===== grep -n 'return html + ' scripts/predixai_trader_mobile_server.py | tail -20 || true =====
9559:    return html + "
9971:    return html + "
RC=0

===== grep -n 'PTP113C75_MOBILE_STATE_FETCH_DEDUP' scripts/predixai_trader_mobile_server.py | head -80 || true =====
3248:  const MARKER = "PTP113C75_MOBILE_STATE_FETCH_DEDUP";
7181:  const MARKER = "PTP113C75_MOBILE_STATE_FETCH_DEDUP";
7697:  const MARKER = "PTP113C75_MOBILE_STATE_FETCH_DEDUP";
8089:  const MARKER = "PTP113C75_MOBILE_STATE_FETCH_DEDUP";
RC=0

===== git diff -- scripts/predixai_trader_mobile_server.py src/predixai/main.py | sed -n '1,220p' =====
RC=0

===== VALIDAR: SERVIDOR LOCAL CONTROLADO =====

===== SEGURANÇA SIMULADA =====

===== grep -n 'simulation_only\|orders_enabled\|real_money_enabled\|auto_click_enabled\|broker_login_enabled\|credentials_allowed' scripts/predixai_trader_mobile_server.py | head -80 || true =====
1277:      simulation_only: first(c.simulation_only, ms.simulation_only, state.simulation_only),
1278:      orders_enabled: first(c.orders_enabled, ms.orders_enabled, state.orders_enabled),
1279:      real_money_enabled: first(c.real_money_enabled, ms.real_money_enabled, state.real_money_enabled),
1280:      auto_click_enabled: first(c.auto_click_enabled, ms.auto_click_enabled, state.auto_click_enabled),
1281:      broker_login_enabled: first(c.broker_login_enabled, ms.broker_login_enabled, state.broker_login_enabled),
1282:      credentials_allowed: first(c.credentials_allowed, state.credentials_allowed)
1426:        "simulation_only=" + d.simulation_only +
1427:        " | orders_enabled=" + d.orders_enabled +
1428:        " | real_money_enabled=" + d.real_money_enabled +
1429:        " | auto_click_enabled=" + d.auto_click_enabled +
1430:        " | broker_login_enabled=" + d.broker_login_enabled +
1431:        " | credentials_allowed=" + d.credentials_allowed
3044:      data.simulation_only === true &&
3045:      data.orders_enabled === false &&
3046:      data.real_money_enabled === false &&
3047:      data.auto_click_enabled === false &&
3048:      data.broker_login_enabled === false &&
3049:      data.credentials_allowed === false;
3085:        `simulation_only=${text(data.simulation_only)} · orders_enabled=${text(data.orders_enabled)} · real_money_enabled=${text(data.real_money_enabled)}`,
3382:        "orders_enabled": False,
3580:            "orders_enabled": False,
3761:            "simulation_only": True,
3763:            "orders_enabled": False,
3764:            "auto_click_enabled": False,
3765:            "real_money_enabled": False,
3789:                            "simulation_only": True,
3790:                            "orders_enabled": False,
3822:        "simulation_only": True,
3824:        "orders_enabled": False,
3825:        "auto_click_enabled": False,
3826:        "real_money_enabled": False,
3873:            "simulation_only": True,
3874:            "orders_enabled": False,
3906:        "orders_enabled": False,
3907:        "auto_click_enabled": False,
3908:        "real_money_enabled": False,
3909:        "broker_login_enabled": False,
3910:        "simulation_only": True,
3948:            "simulation_only": True,
3949:            "orders_enabled": False,
3950:            "auto_click_enabled": False,
3951:            "real_money_enabled": False,
3962:        "simulation_only": True,
3963:        "orders_enabled": False,
3964:        "auto_click_enabled": False,
3965:        "real_money_enabled": False,
4894:            "orders_enabled": False,
5831:        "simulation_only": bool(pick("simulation_only", True)),
5832:        "orders_enabled": bool(pick("orders_enabled", False)),
5833:        "real_money_enabled": bool(pick("real_money_enabled", False)),
5834:        "auto_click_enabled": bool(pick("auto_click_enabled", False)),
5835:        "broker_login_enabled": bool(pick("broker_login_enabled", False)),
5836:        "credentials_allowed": bool(pick("credentials_allowed", False)),
5889:        safety.get("simulation_only") is not True
5890:        or safety.get("orders_enabled") is not False
5891:        or safety.get("real_money_enabled") is not False
5892:        or safety.get("auto_click_enabled") is not False
5893:        or safety.get("broker_login_enabled") is not False
5894:        or safety.get("credentials_allowed") is not False
6108:        safety.get("simulation_only") is True
6109:        and safety.get("orders_enabled") is False
6110:        and safety.get("real_money_enabled") is False
6111:        and safety.get("auto_click_enabled") is False
6112:        and safety.get("broker_login_enabled") is False
6113:        and safety.get("credentials_allowed") is False
6244:        "simulation_only": True,
6245:        "orders_enabled": False,
6246:        "real_money_enabled": False,
6247:        "auto_click_enabled": False,
6248:        "broker_login_enabled": False,
6249:        "credentials_allowed": False,
6337:        "simulation_only": True,
6338:        "orders_enabled": False,
6339:        "real_money_enabled": False,
6340:        "auto_click_enabled": False,
6341:        "broker_login_enabled": False,
6342:        "credentials_allowed": False,
6511:        "simulation_only": True,
6512:        "orders_enabled": False,
6513:        "real_money_enabled": False,
RC=0

===== REGISTRAR RELATÓRIO E MARKDOWN =====

PRÓXIMA AÇÃO
- Se RESULTADO_FINAL for PASS_RECOVERY_HTTP_200: validar /mobile no celular.
- Se RESULTADO_FINAL iniciar com WARN: colar este relatório no chat antes de avançar.
- Se RESULTADO_FINAL iniciar com FAIL: não avançar; analisar novo erro.
